feat: article template

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@layer components {
+  .heading-1 {
+    @apply text-2xl tracking-wide font-bold;
+  }
+}
