--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'national';
+  font-family: 'National';
   src: url(/National-Book.woff2) format('woff2');
   font-style: normal;
   font-display: optional;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: '';
+  font-family: 'National';
   src: url(/National-Medium.woff2) format('woff2');
   font-style: normal;
   font-display: optional;
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-  font-family: '';
+  font-family: 'National';
   src: url(/National-Semibold.woff2) format('woff2');
   font-style: normal;
   font-display: optional;
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-  font-family: '';
+  font-family: 'National';
   src: url(/National-Bold.woff2) format('woff2');
   font-style: normal;
   font-display: optional;
@@ -31,9 +31,9 @@
 }
 
 @font-face {
-  font-family: '';
+  font-family: 'National';
   src: url(/National-Black.woff2) format('woff2');
   font-style: normal;
   font-display: optional;
-  font-weight: 800;
+  font-weight: 900;
 }
